--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
     "name": "Firebase 推播測試",
     "short_name": "推播測試",
-    "start_url": "./",
+    "start_url": "/FirebasePWA-Test/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "./icon-192x192.png",
+            "src": "/FirebasePWA-Test/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "./icon-512x512.png", 
+            "src": "/FirebasePWA-Test/icon-512x512.png", 
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
