--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,6 @@
             "type": "image/png",
             "purpose": "any maskable"
         }
-    ]
+    ],
+    "gcm_sender_id": "129060872565"
 }
